默认账号多语言识别

--- a/WizGroup/WizGroup-Info.plist
+++ b/WizGroup/WizGroup-Info.plist
@@ -10,8 +10,7 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
+		<string>scb.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -19,8 +18,7 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>Icon.png</string>
-				<string>Icon@2x.png</string>
+				<string>scb.png</string>
 			</array>
 		</dict>
 	</dict>
